# CPP_Coursera

./: .gitignore  README.md
White_belt/Week_1/: CMakeLists.txt  main.cpp
White_belt/Week_2/: CMakeLists.txt  main.cpp
White_belt/Week_3/: CMakeLists.txt  main.cpp
White_belt/Week_4/: CMakeLists.txt  main.cpp
White_belt/Week_4/Exceptions/: CMakeLists.txt  main.cpp
White_belt/Week_5/: CMakeLists.txt  main.cpp
White_belt/Week_5/right_sol/: CMakeLists.txt  main.cpp
Yellow_belt/Week_1/Integer_types/: CMakeLists.txt  average_temp.txt  main.cpp
Yellow_belt/Week_1/Matrix_sum/: CMakeLists.txt  main.cpp
Yellow_belt/Week_1/Tuples_and_pairs/: CMakeLists.txt  main.cpp
Yellow_belt/Week_1/Tuples_and_pairs/All_in_sqaure/: CMakeLists.txt  main.cpp
Yellow_belt/Week_1/Tuples_and_pairs/Refernce_on_element/: CMakeLists.txt  main.cpp
Yellow_belt/Week_1/templates/: CMakeLists.txt  main.cpp
Yellow_belt/Week_2/: CMakeLists.txt
Yellow_belt/Week_2/TestSum/: CMakeLists.txt  main.cpp
Yellow_belt/Week_2/synonyms/: CMakeLists.txt  main.cpp
Yellow_belt/Week_3/ProgramDecompostion2/: query.cpp
Yellow_belt/Week_3/header_files/: CMakeLists.txt  coursera.i  main.cpp  note.txt  synonyms.h  test_runner.h  tests.h
Yellow_belt/Week_4/SplitIntoWords/: CMakeLists.txt  main.cpp
